# embed-str

./: Cargo.toml  README.md
src/: lib.rs
